syntax = "proto3";

package stock;

option go_package = "./pb;pb";
import "google/api/annotations.proto";

service stock {
  rpc GetStock(SearchStock) returns (StockInfo) {
    option (google.api.http) = {
          post: "/v1/get/stock"
          body: "*"
        };
  };

  rpc PreDeduct(PreDeductRequest) returns (PreDeductResponse) {
    option (google.api.http) = {
      post: "/v1/pre/deduct"
      body: "*"
    };
  }

  rpc CancelTransaction(CancelTransactionRequest) returns (PreDeductResponse) {
    option (google.api.http) = {
      post: "/v1/cancel/transaction"
      body: "*"
    };
  }
}

message SearchStock {
  string goods_id = 1;
}

message StockInfo {
  string goods_id = 1;
  int32 stock_num = 2;
}

message PreDeductRequest {
  string goods_id = 1;
  string user_id = 2;
}

message PreDeductResponse {
  string goods_id = 1;
  string user_id = 2;
}

message CancelTransactionRequest {
  string goods_id = 1;
  string user_id = 2;
}